CHANGELOG RoundCube Webmail
---------------------------

2008/12/16 (thomasb)
----------
- Only abbreviate file name for IE browsers (#1485063)

2008/12/11 (alec)
----------
- Performance: allow setting imap rootdir and delimiter before connect (#1485172)

2008/12/06 (alec)
----------
- Fix sorting of folders with more than 2 levels (#1485569)
- Fix search results page jumps in LDAP addressbook (#1485253)
- Fix empty line before the signature in IE (#1485351)
- Fix horizontal scrollbar in preview pane on IE (#1484633)
- Add Robots meta tag in login page and installer (#1484846)

2008/12/04 (alec)
----------
- Added 'show_images' option, removed 'addrbook_show_images' (#1485597)
- Performance fix: some mail actions do not require imap connection

2008/11/28 (thomasb)
----------
- Option to check for new mails in all folders (#1484374)
- Don't set client busy when checking for new messages (#1485276)

2008/11/26 (alec)
----------
- Allow UTF-8 folder names in config (#1485579)
- Add junk_mbox option configuration in installer (#1485579)

2008/11/23 (thomasb)
----------
- Do serverside addressbook queries for autocompletion (#1485531)

2008/11/23 (alec)
----------
- Allow setting attachment col position in 'list_cols' option
- Allow override 'list_cols' via skin (#1485577)

2008/11/21 (alec)
----------
- Fix 'cache' table cleanup on session destroy (#1485516)
- Increase speed of session destroy and garbage clean up
- Fix session timeout when DB server got clock skew (#1485490)

2008/11/19 (alec)
----------
- Fix handling of some malformed messages (#1484438)
- Speed up raw message body handling
- Better HTML entities conversion in html2text (#1485519)

2008/11/15 (alec)
----------
- Fix big memory consumption and speed up searching on servers without SORT capability
- Fix setting locale to tr_TR, ku and az_AZ (#1485470) 

2008/11/12 (alec)
----------
- Use SORT for searching on servers with SORT capability
- Added message status filter

2008/11/06 (alec)
----------