@@ -1,6 +1,10 @@
 CHANGELOG RoundCube Webmail
 ---------------------------
 
+2008/12/18 (alec)
+----------
+- Fix STARTTLS before AUTH in SMTP connection (#1484883)
+
 2008/12/16 (thomasb)
 ----------
 - Only abbreviate file name for IE browsers (#1485063)
